--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,6 @@ Django==5.2.6
 sqlparse==0.5.3
 tzdata==2025.2
 whitenoise==6.11.0
+gunicorn==23.0.0
+psycopg2-binary==2.9.10
+dj-database-url==3.0.1
